force-app/main/default/objects/GLW_OrderItem__c/fields/GLW_Order__c.field-meta.xml
<CustomField>
    <fullName>GLW_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>GLW_Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>