force-app/main/default/objects/GLW_OrderItem__c/fields/GLW_Product__c.field-meta.xml
<CustomField>
    <fullName>GLW_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>