force-app/main/default/objects/GLW_OrderItem__c/fields/GLW_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GLW_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>