force-app/main/default/objects/GLW_OrderItem__c/fields/GLW_Total__c.field-meta.xml
<CustomField>
    <fullName>GLW_Total__c</fullName>
    <formula>BLANKVALUE(GLW_Quantity__c, 0) * BLANKVALUE(GLW_UnitPrice__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the total amount based on GLW_Quantity__c and GLW_UnitPrice__c, while handling NULL values gracefully</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>