force-app/main/default/objects/GLW_OrderItem__c/fields/GLW_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>GLW_UnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>