force-app/main/default/objects/GLW_OrderItem__c/validationRules/GLW_Prevent_Invalid_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>GLW_Prevent_Invalid_Quantity</fullName>
    <active>true</active>
    <description>Prevent saving order items with invalid quantities.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(GLW_Quantity__c)), GLW_Quantity__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>GLW_Quantity__c</errorDisplayField>
    <errorMessage>Quantity cannot be negative or zero.</errorMessage>
</ValidationRule>