force-app/main/default/objects/GLW_OrderItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>GLW_Order__c</columns>
    <columns>NAME</columns>
    <columns>GLW_Product__c</columns>
    <columns>GLW_Quantity__c</columns>
    <columns>GLW_UnitPrice__c</columns>
    <columns>GLW_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>